--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "strictBindCallApply": true,
     "strict": true,
     "resolveJsonModule": true,
-    "lib": ["es2021", "DOM"]
+    "lib": ["es2021", "DOM"],
+    "esModuleInterop": true,
+    "jsx": "react-jsx"
   },
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
